prototypes/p5a/tests/invalid/02_visibility_violation.hll
// INVALID: accessing non-exported symbol from import
module consumer

import lib.privateHelper  // ERROR: privateHelper is not exported from lib

function main() {
    let x = privateHelper()
}
